--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:frontend": "cd frontend && npm run dev",
     "build": "npm run build:backend && npm run build:frontend",
     "build:backend": "cd backend && npm run build",
-    "build:frontend": "cd frontend && npm run build"
+    "build:frontend": "cd frontend && npm run build",
+    "start:prod": "echo 'Use backend/ or frontend/ Procfile' && exit 1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
