--- a/frontend/nixpacks.toml
+++ b/frontend/nixpacks.toml
@@ -2,11 +2,11 @@
 nixPkgs = ["nodejs-18_x"]
 
 [phases.install]
-cmds = ["npm install"]
+cmds = ["npm ci --omit=dev"]
 
 [phases.build]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npm run start:prod"
+cmd = "NODE_ENV=production npm run start:prod"
 
